# VoxelEngine2

./: 2  Cargo.toml  \
.cargo/: config.toml
assets/shaders/: post.wgsl
src/: components.rs  main.rs
