[package]
name = "VoxelEngine2"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = [] }
bevy_flycam = "*"
noise = "*"
fastnoise-lite = "1.1.1"
rayon = "1.10.0"
simdnoise = "3.1.6"
avian3d = "*"


[profile.dev]
opt-level = 1
debug = 1
overflow-checks = false
incremental = true

[profile.release]
opt-level = 3
debug = 0
